Add ML302 4G modules support.
Signed-off-by: codebug8 <livelwh@outlook.com>

--- a/arch/arm/configs/100ask_stm32mp157_pro_defconfig
+++ b/arch/arm/configs/100ask_stm32mp157_pro_defconfig
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: arm-buildroot-linux-gnueabihf-gcc.br_real (Buildroot 2020.02.4-gd77178a-dirty) 8.4.0
+# Compiler: arm-buildroot-linux-gnueabihf-gcc.br_real (Buildroot 2020.02-g6515f51-dirty) 8.4.0
 #
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=80400
@@ -3811,8 +3811,7 @@ CONFIG_DRM_DW_MIPI_DSI=y
 # end of Display Interface Bridges
 
 CONFIG_DRM_STI=m
-CONFIG_DRM_ETNAVIV=m
-CONFIG_DRM_ETNAVIV_THERMAL=y
+# CONFIG_DRM_ETNAVIV is not set
 # CONFIG_DRM_ARCPGU is not set
 CONFIG_DRM_MXS=y
 CONFIG_DRM_MXSFB=m
@@ -4384,7 +4383,7 @@ CONFIG_USB_ISP1760_DUAL_ROLE=y
 #
 CONFIG_USB_SERIAL=y
 # CONFIG_USB_SERIAL_CONSOLE is not set
-# CONFIG_USB_SERIAL_GENERIC is not set
+CONFIG_USB_SERIAL_GENERIC=y
 # CONFIG_USB_SERIAL_SIMPLE is not set
 # CONFIG_USB_SERIAL_AIRCABLE is not set
 # CONFIG_USB_SERIAL_ARK3116 is not set
@@ -4415,24 +4414,24 @@ CONFIG_USB_SERIAL_IPW=m
 # CONFIG_USB_SERIAL_MOS7720 is not set
 # CONFIG_USB_SERIAL_MOS7840 is not set
 # CONFIG_USB_SERIAL_MXUPORT is not set
-# CONFIG_USB_SERIAL_NAVMAN is not set
+CONFIG_USB_SERIAL_NAVMAN=m
 # CONFIG_USB_SERIAL_PL2303 is not set
 # CONFIG_USB_SERIAL_OTI6858 is not set
 # CONFIG_USB_SERIAL_QCAUX is not set
-# CONFIG_USB_SERIAL_QUALCOMM is not set
+CONFIG_USB_SERIAL_QUALCOMM=m
 # CONFIG_USB_SERIAL_SPCP8X5 is not set
 # CONFIG_USB_SERIAL_SAFE is not set
-# CONFIG_USB_SERIAL_SIERRAWIRELESS is not set
+CONFIG_USB_SERIAL_SIERRAWIRELESS=m
 # CONFIG_USB_SERIAL_SYMBOL is not set
 # CONFIG_USB_SERIAL_TI is not set
 # CONFIG_USB_SERIAL_CYBERJACK is not set
 # CONFIG_USB_SERIAL_XIRCOM is not set
-CONFIG_USB_SERIAL_WWAN=m
-# CONFIG_USB_SERIAL_OPTION is not set
+CONFIG_USB_SERIAL_WWAN=y
+CONFIG_USB_SERIAL_OPTION=y
 # CONFIG_USB_SERIAL_OMNINET is not set
 # CONFIG_USB_SERIAL_OPTICON is not set
 # CONFIG_USB_SERIAL_XSENS_MT is not set
-# CONFIG_USB_SERIAL_WISHBONE is not set
+CONFIG_USB_SERIAL_WISHBONE=m
 # CONFIG_USB_SERIAL_SSU100 is not set
 # CONFIG_USB_SERIAL_QT2 is not set
 # CONFIG_USB_SERIAL_UPD78F0730 is not set
