--- a/arch/arm/boot/dts/stm32mp157-100ask-pinctrl.dtsi
+++ b/arch/arm/boot/dts/stm32mp157-100ask-pinctrl.dtsi
@@ -521,7 +521,7 @@
 				pins {
 					pinmux = <STM32_PINMUX('F', 14, AF5)>, /* I2C1_SCL */
 						   <STM32_PINMUX('F', 15, AF5)>; /* I2C1_SDA */
-					bias-disable;
+					bias-pull-up;
 					drive-open-drain;
 					slew-rate = <0>;
 				};
